--- a/app/index.html
+++ b/app/index.html
@@ -35,26 +35,23 @@
             </div>
         </div>
         <div class="left__panel-item left__panel-erase">erase</div>
-        <div class="left__panel-item">magnifier</div>
-        <div class="left__panel-item">4</div>
-
+        <div class="left__panel-item left__panel-magnifier">magnifier</div>
+        <div class="left__panel-item left__panel-hand">hand</div>
     </section>
     <section class="bottom__panel">
         <div class="bottom__panel-item">
             <input type="color" name="" id="bottom__panel-item-color">
             <input type="range" min="0" max="100" step="1" value="50" id= "input__size-brush">
         </div>
-        <div class="bottom__panel-item">2</div>
-        <div class="bottom__panel-item">3</div>
+        <div class="bottom__panel-item">
+            <input type="range" min="0.1" max="10" step="0.1" value="50" id= "input__canvas-scale">
+        </div>
+        <div class="bottom__panel-item bottom__panel-film">film</div>
         <div class="bottom__panel-item">4</div>
         <div class="bottom__panel-item test_click">test</div>
     </section>
     <section class="right__panel">
         <span class="right__title">История</span>
-        <div class="right__panel-item">1</div>
-        <div class="right__panel-item">2</div>
-        <div class="right__panel-item">3</div>
-        <div class="right__panel-item">4</div>
     </section>
     <script src="js/libs/lib.js"></script>
     <script type="module" src="js/script.js"></script>
