--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/libs/libs.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <title>MoGo</title>
+    <title>Paint</title>
 </head>
 
 <body>
@@ -26,15 +26,226 @@
     </section>
     <section class="left__panel">
         <span class="left__panel-name">Tools</span>
-        <div class="left__panel-item left__panel-active">Кисть
+        <div class="left__panel-item left__panel-active">
+            <svg version="1.1" class="left__panel-icon " xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+<g>
+	<g>
+		<path d="M180.439,342.679c-23.852-23.852-63.353-34.368-99.873-18.984c-32.344,14.59-53.481,46.978-53.833,82.69
+			c0,39.434-6.87,71.147-13.652,82.09L0,509.568l24.756,1.772c6.064,0.44,12.422,0.66,18.97,0.66
+			c48.193,0,106.978-12.1,138.721-41.25C213.639,441.682,217.25,379.489,180.439,342.679z"/>
+	</g>
+</g>
+<g>
+	<g>
+		<path d="M244.262,279.135c-14.681-14.688-31.222-26.187-48.744-34.531c-15.172,15.654-29.929,31.505-44.266,47.3
+			c18.763,5.281,36.026,15.167,50.413,29.594c14.407,14.377,24.719,32.302,30.17,51.85c15.613-14.143,31.317-28.707,47.091-43.885
+			C270.917,311.158,259.325,293.785,244.262,279.135z"/>
+	</g>
+</g>
+<g>
+	<g>
+		<path d="M505.32,6.677C494.085-4.544,475.613-9.803,385.789,60.07c-53.438,41.572-108.728,102.36-166.897,160.529l-1.185,1.185
+			l-0.046-0.027l-0.337,0.339c17.186,9.293,33.435,21.105,48.003,35.682c15.033,14.617,27.173,31.661,36.381,49.788l0.416-0.408
+			l-0.06-0.101l1.672-1.672c58.14-58.14,106.604-125.724,148.177-179.176C521.726,36.442,516.585,17.941,505.32,6.677z"/>
+	</g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+            </svg>
             <div class="left__panel__brush-panel brush-panel">
-                <div class="brush-panel_item square-brush">Квадрат</div>
-                <div class="brush-panel_item line-brush">Линия</div>
+                <div class="brush-panel_item square-brush">
+                    <svg version="1.1" class="left__panel-icon " xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+               <g>
+                   <g>
+                       <path d="M180.439,342.679c-23.852-23.852-63.353-34.368-99.873-18.984c-32.344,14.59-53.481,46.978-53.833,82.69
+                           c0,39.434-6.87,71.147-13.652,82.09L0,509.568l24.756,1.772c6.064,0.44,12.422,0.66,18.97,0.66
+                           c48.193,0,106.978-12.1,138.721-41.25C213.639,441.682,217.25,379.489,180.439,342.679z"/>
+                   </g>
+               </g>
+               <g>
+                   <g>
+                       <path d="M244.262,279.135c-14.681-14.688-31.222-26.187-48.744-34.531c-15.172,15.654-29.929,31.505-44.266,47.3
+                           c18.763,5.281,36.026,15.167,50.413,29.594c14.407,14.377,24.719,32.302,30.17,51.85c15.613-14.143,31.317-28.707,47.091-43.885
+                           C270.917,311.158,259.325,293.785,244.262,279.135z"/>
+                   </g>
+               </g>
+               <g>
+                   <g>
+                       <path d="M505.32,6.677C494.085-4.544,475.613-9.803,385.789,60.07c-53.438,41.572-108.728,102.36-166.897,160.529l-1.185,1.185
+                           l-0.046-0.027l-0.337,0.339c17.186,9.293,33.435,21.105,48.003,35.682c15.033,14.617,27.173,31.661,36.381,49.788l0.416-0.408
+                           l-0.06-0.101l1.672-1.672c58.14-58.14,106.604-125.724,148.177-179.176C521.726,36.442,516.585,17.941,505.32,6.677z"/>
+                   </g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+                    </svg>
+                </div>
+                <div class="brush-panel_item line-brush">
+                    <svg version="1.1" class="left__panel-icon " xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 469.333 469.333" style="enable-background:new 0 0 469.333 469.333;" xml:space="preserve">
+               <g>
+                   <g>
+                       <g>
+                           <path d="M401.781,0c-21.156,0-41.365,10.104-54.24,27.292l-78.906,112.302c-8.417,11.24-26.771,12.542-36.677,2.615
+                               l-22.167-22.167c-8.625-8.625-20.094-13.375-32.292-13.375h-3c-12.198,0-23.667,4.75-32.292,13.375l-32.417,32.417
+                               c-4.167,4.167-4.167,10.917,0,15.083l192,192c2.083,2.083,4.813,3.125,7.542,3.125c2.729,0,5.458-1.042,7.542-3.125
+                               l32.417-32.417c8.625-8.625,13.375-20.094,13.375-32.292v-3c0-12.198-4.75-23.667-13.375-32.292l-22.167-22.167
+                               c-4.531-4.531-7.125-10.802-7.125-17.208c0-7.615,3.635-14.896,9.469-19.271l112.833-79.302
+                               c16.927-12.677,27.031-32.885,27.031-54.042C469.333,30.302,439.031,0,401.781,0z M405.333,85.333
+                               C393.573,85.333,384,75.76,384,64c0-11.76,9.573-21.333,21.333-21.333S426.667,52.24,426.667,64
+                               C426.667,75.76,417.094,85.333,405.333,85.333z"/>
+                           <path d="M104.083,192c-4.167-4.167-10.917-4.167-15.083,0l-76.5,76.5C4.437,276.562,0,287.271,0,298.667
+                               s4.438,22.104,12.5,30.167l16.385,16.396c3.354,3.365,8.573,4.104,12.719,1.781l37.604-20.885l-20.885,37.604
+                               c-2.313,4.156-1.583,9.354,1.781,12.719l80.396,80.385c8.063,8.063,18.771,12.5,30.167,12.5s22.104-4.438,30.167-12.5l76.5-76.5
+                               c4.167-4.167,4.167-10.917,0-15.083L104.083,192z"/>
+                       </g>
+                   </g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+               <g>
+               </g>
+                    </svg>
+                </div>
             </div>
         </div>
-        <div class="left__panel-item left__panel-erase">Ластик</div>
-        <div class="left__panel-item left__panel-magnifier">Увеличить</div>
-        <div class="left__panel-item left__panel-hand">Двигать</div>
+        <div class="left__panel-item left__panel-erase">
+            <svg version="1.1" class="left__panel-icon " xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="548.157px" height="548.157px" viewBox="0 0 548.157 548.157" style="enable-background:new 0 0 548.157 548.157;"
+	 xml:space="preserve">
+<g>
+	<path d="M545.027,112.765c-3.046-6.471-7.57-11.657-13.565-15.555c-5.996-3.9-12.614-5.852-19.846-5.852H292.351
+		c-11.04,0-20.175,4.184-27.408,12.56L9.13,396.279c-4.758,5.328-7.661,11.56-8.708,18.698c-1.049,7.139-0.144,13.941,2.712,20.417
+		c3.044,6.468,7.564,11.652,13.561,15.553c5.997,3.898,12.612,5.853,19.845,5.853h219.268c11.042,0,20.177-4.179,27.41-12.56
+		l255.813-292.363c4.75-5.33,7.655-11.561,8.699-18.699C548.788,126.039,547.877,119.238,545.027,112.765z M255.811,420.254H36.54
+		l95.93-109.632h219.27L255.811,420.254z"/>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+            </svg>
+        </div>
+        <div class="left__panel-item left__panel-magnifier">
+            <svg class="left__panel-icon " xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="-1 0 136 136.21852">
+                <g id="surface1">
+                <path d="M 93.148438 80.832031 C 109.5 57.742188 104.03125 25.769531 80.941406 9.421875 C 57.851562 -6.925781 25.878906 -1.460938 9.53125 21.632812 C -6.816406 44.722656 -1.351562 76.691406 21.742188 93.039062 C 38.222656 104.707031 60.011719 105.605469 77.394531 95.339844 L 115.164062 132.882812 C 119.242188 137.175781 126.027344 137.347656 130.320312 133.269531 C 134.613281 129.195312 134.785156 122.410156 130.710938 118.117188 C 130.582031 117.980469 130.457031 117.855469 130.320312 117.726562 Z M 51.308594 84.332031 C 33.0625 84.335938 18.269531 69.554688 18.257812 51.308594 C 18.253906 33.0625 33.035156 18.269531 51.285156 18.261719 C 69.507812 18.253906 84.292969 33.011719 84.328125 51.234375 C 84.359375 69.484375 69.585938 84.300781 51.332031 84.332031 C 51.324219 84.332031 51.320312 84.332031 51.308594 84.332031 Z M 51.308594 84.332031 " style=" stroke:none;fill-rule:nonzero;fill:rgb(0%,0%,0%);fill-opacity:1;" />
+                </g>
+            </svg>
+        </div>
+        <div class="left__panel-item left__panel-hand">
+            <svg class="left__panel-icon " enable-background="new 0 0 24 24" height="512" viewBox="0 0 24 24" width="512" xmlns="http://www.w3.org/2000/svg"><path d="m19 6c-.828 0-1.5.672-1.5 1.5v.25c0 .138-.112.25-.25.25s-.25-.112-.25-.25v-1.25c0-.828-.672-1.5-1.5-1.5s-1.5.672-1.5 1.5v1.25c0 .138-.112.25-.25.25s-.25-.112-.25-.25v-2.25c0-.828-.672-1.5-1.5-1.5s-1.5.672-1.5 1.5v2.25c0 .138-.112.25-.25.25s-.25-.112-.25-.25v-1.75c0-.828-.672-1.5-1.5-1.5s-1.5.672-1.5 1.5v2 2.25c0 .138-.112.25-.25.25s-.25-.112-.25-.25v-2.25h-.494c-1.645 0-3.007 1.328-3.006 2.973.005 5.281 3.849 9.027 6.213 9.027h7.287c2.209 0 4-1.791 4-4v-8.5c0-.828-.672-1.5-1.5-1.5z"/></svg>
+        </div>
     </section>
     <section class="bottom__panel">
         <div class="bottom__panel-item">
@@ -51,8 +262,6 @@
     <section class="right__panel">
         <span class="right__title">История</span>
     </section>
-
-
 
     <div class="modal__setting-canvas">
         <div class="modal__setting-canvas-center">
