--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
     </section>
     <section class="left__panel">
         <span class="left__panel-name">Tools</span>
-        <div class="left__panel-item left__panel-active">
+        <div class="left__panel-item ">
             <svg version="1.1" class="left__panel-icon " xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
 <g>
@@ -272,6 +272,7 @@
             <div class="setting-canvas__position">
                 <label>top<input id = "setting-canvas__top" type="number"></label>
                 <label>left<input id="setting-canvas__left" type="number"></label>
+                <label>scale<input id = "setting-canvas__scale" max="10" min="0.1" step="0.1" type="number"></label>
             </div>
             <button id="modal__setting-button">Изменить</button>
         </div>
