--- a/app/index.html
+++ b/app/index.html
@@ -279,8 +279,14 @@
     </div>
 
     <script src="js/libs/lib.js"></script>
-    <script src="js/libs/gif/gif.js"></script>
+
+    <script type="text/javascript" src="js/LZWEncoder.js"></script> 
+    <script type="text/javascript" src="js/NeuQuant.js"></script>
+    <script type="text/javascript" src="js/GIFEncoder.js"></script> 
+    <script type="text/javascript" src="js/b64.js"></script> 
+
     <script type="module" src="js/script.js"></script>
+
 </body>
 
 </html>
