--- a/app/index.html
+++ b/app/index.html
@@ -256,7 +256,7 @@
             <input type="range" min="0.1" max="10" step="0.1" value="50" id= "input__canvas-scale">
         </div>
         <div class="bottom__panel-item bottom__panel-film">film</div>
-        <div class="bottom__panel-item">4</div>
+        <div class="bottom__panel-item bottom__panel-save-gif">Создать gif из истории</div>
         <div class="bottom__panel-item test_click">test</div>
     </section>
     <section class="right__panel">
